--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "vitepress": "^1.6.4",
+    "vitepress-plugin-tabs": "^0.7.1",
     "vue": "^3.5.18"
   },
   "scripts": {
